# strava-mcp-perf-prediction

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: claude_desktop_config.json
src/strava_sport_science_mcp/: __init__.py  auth.py  config.py  dependencies.py  server.py  strava_client.py
src/strava_sport_science_mcp/models/: __init__.py  activity.py  metrics.py
src/strava_sport_science_mcp/tools/: __init__.py  raw.py  sport_science.py
tests/: __init__.py  conftest.py  test_sport_science.py  test_tools.py
